Fix word-wrap bug
Fixes word-wrapping in the description box for an individual quiz page.
Fixes #2. Also removes the old bootstrap CSS files.

--- a/app/webroot/css/quiz.css
+++ b/app/webroot/css/quiz.css
@@ -117,6 +117,9 @@ p{
 	height: 300px;
 }
 
+.qdesc{
+	word-wrap:break-word;
+}
 
 
 
